pkg/lang/testdata/ub/config/valid/configurations-literal.ub
factory: {
  configurations: { aws.default: { region: 'us-east-1' } }
}
