pkg/lang/testdata/ub/config/invalid/configurations-var-expression.ub
factory: {
  configurations: {
    aws.default: {
      region:  $'{{var.region}}-x'
      profile: if var.prod then 'prod' else 'dev'
      team:    var.tags['team']
    }
  }
}
